Fix bugs on Safari by changing font-size.

--- a/source/stylesheets/modules/_m-contact.scss
+++ b/source/stylesheets/modules/_m-contact.scss
@@ -63,7 +63,6 @@
 .contact-description {
   margin: 0 auto;
   text-align: left;
-  width: 74%;
 }
 
 @media #{$breakpoint-mobile-landscape} {
@@ -109,10 +108,12 @@
 
   .contact-office-name {
     margin: 21px 0 17px;
+    font-size: 26px;
   }
 
   .contact-address {
     line-height: 27px;
+    font-size: 17px;
   }
 
   .contact-show-map-btn {
@@ -120,7 +121,7 @@
   }
 
   .contact-description {
-    width: 97%;
+    padding-left: 10%;
   }
 
 }
@@ -140,7 +141,7 @@
   }
 
   .contact-description {
-    width: 70%;
+    padding-left: 15%;
   }
 
 }
@@ -151,8 +152,12 @@
     max-width: 324px;
   }
 
-  .contact-description {
-    width: 64%;
+  .contact-office-name {
+    font-size: 30px;
+  }
+
+  .contact-address {
+    font-size: 19px;
   }
 
 }
